end of workshop4

--- a/css/facebook.css
+++ b/css/facebook.css
@@ -3,6 +3,12 @@
   position: fixed;
   bottom: 0px;
   right: 20px;
+  /* Applies the given border style to all sides. */
+  border: 1px solid #000;
+  /* Removes the border on the bottom. */
+  border-bottom: none;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
 }
 /* Style applies to a elements within ul elements with class nav within
    an element with class fb-trending */
